--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "daisyui": "^5.0.35",
     "pinia": "^3.0.1",
+    "tailwindcss": "^4.1.7",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.1.7",
     "@tsconfig/node22": "^22.0.1",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.14.0",
